--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jimodeyuye/file-io.git"
+    "url": "git+https://github.com/xxmi/file-io.git"
   },
   "keywords": [
     "file-io"
@@ -16,7 +16,10 @@
   "author": "xxmi.org",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jimodeyuye/file-io/issues"
+    "url": "https://github.com/xxmi/file-io/issues"
   },
-  "homepage": "https://github.com/jimodeyuye/file-io#readme"
+  "homepage": "https://github.com/xxmi/file-io#readme",
+  "dependencies": {
+    "log4js": "^2.5.3"
+  }
 }
